tests/fail/elaboration/string-literal/ambiguous.fathom
//~ exit-code = 1

"hello"
